--- a/Ssd_project/Ssd_project.vcxproj
+++ b/Ssd_project/Ssd_project.vcxproj
@@ -127,11 +127,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="common.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ssd.cpp" />
     <ClCompile Include="testShellApplication.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="common.h" />
     <ClInclude Include="ssd.h" />
     <ClInclude Include="testShellApplication.h" />
   </ItemGroup>
